# image_2_excel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/image_2_excel/: __init__.py  __main__.py  cli.py  image_2_excel.py
